# models/blog.go
@@ -1,12 +1,12 @@
 package models
 
 type Blogs struct {
-	ID       uint64     `gorm:"primarKey;autoIncrement" json:"id"`
-	Title    string     `gorm:"type:varchar(255)" form:"title" json:"title" binding:"required"`
-	Content  string     `gorm:"type:varchar(255)" form:"content" json:"content" binding:"required"`
-	Image    string     `gorm:"type:varchar(255)"  json:"image"`
-	UserID   uint       `gorm:"index" form:"user_id" binding:"required"`
-	Users    *Users     `gorm:"foreignKey:UserID" json:"author" binding:"-"`
-	Tags     []Tags     `gorm:"many2many:blog_tags;" json:"tags"`
-	Comments []Comments `gorm:"foreignKey:BlogID;references:ID" json:"comments"`
+	ID       uint64     `gorm:"primarKey;autoIncrement" `
+	Title    string     `gorm:"type:varchar(255)"`
+	Content  string     `gorm:"type:varchar(255)"`
+	Image    string     `gorm:"type:varchar(255)"`
+	UserID   uint       `gorm:"index"`
+	Users    *Users     `gorm:"foreignKey:UserID"`
+	Tags     []Tags     `gorm:"many2many:blog_tags;"`
+	Comments []Comments `gorm:"constraint:OnDelete:CASCADE;foreignKey:BlogID;references:ID"`
 }
